@@ -125,8 +125,7 @@ final class QueryAnalyzer {
                 partialResults.addAll(terms);
             }
             if (children.isEmpty() == false) {
-                List<Result> childResults = children.stream().map(ResultBuilder::getResult).collect(Collectors.toList());
-                partialResults.addAll(childResults);
+                children.stream().map(ResultBuilder::getResult).forEach(partialResults::add);
             }
             if (partialResults.isEmpty()) {
                 return verified ? Result.MATCH_NONE : Result.UNKNOWN;
@@ -160,8 +159,7 @@ final class QueryAnalyzer {
                 return QueryVisitor.EMPTY_VISITOR;
             }
             int minimumShouldMatchValue = 0;
-            if (parent instanceof BooleanQuery) {
-                BooleanQuery bq = (BooleanQuery) parent;
+            if (parent instanceof BooleanQuery bq) {
                 if (bq.getMinimumNumberShouldMatch() == 0
                     && bq.clauses().stream().anyMatch(c -> c.getOccur() == Occur.MUST || c.getOccur() == Occur.FILTER)) {
                     return QueryVisitor.EMPTY_VISITOR;
@@ -198,8 +196,7 @@ final class QueryAnalyzer {
 
         @Override
         public void consumeTermsMatching(Query query, String field, Supplier<ByteRunAutomaton> automaton) {
-            if (query instanceof TermInSetQuery) {
-                TermInSetQuery q = (TermInSetQuery) query;
+            if (query instanceof TermInSetQuery q) {
                 PrefixCodedTerms.TermIterator ti = q.getTermData().iterator();
                 BytesRef term;
                 Set<QueryExtraction> qe = new HashSet<>();
@@ -245,7 +242,7 @@ final class QueryAnalyzer {
     }
 
     private static Result handleConjunction(List<Result> conjunctionsWithUnknowns) {
-        List<Result> conjunctions = conjunctionsWithUnknowns.stream().filter(r -> r.isUnknown() == false).collect(Collectors.toList());
+        List<Result> conjunctions = conjunctionsWithUnknowns.stream().filter(r -> r.isUnknown() == false).toList();
         if (conjunctions.isEmpty()) {
             if (conjunctionsWithUnknowns.isEmpty()) {
                 throw new IllegalArgumentException("Must have at least one conjunction sub result");
