@@ -11,18 +11,17 @@ package org.elasticsearch.action.admin.cluster.storedscripts;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
-import org.elasticsearch.common.xcontent.StatusToXContentObject;
-import org.elasticsearch.rest.RestStatus;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.script.ScriptContextInfo;
 import org.elasticsearch.xcontent.ConstructingObjectParser;
 import org.elasticsearch.xcontent.ParseField;
+import org.elasticsearch.xcontent.ToXContentObject;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -30,7 +29,7 @@ import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-public class GetScriptContextResponse extends ActionResponse implements StatusToXContentObject {
+public class GetScriptContextResponse extends ActionResponse implements ToXContentObject {
 
     private static final ParseField CONTEXTS = new ParseField("contexts");
     final Map<String, ScriptContextInfo> contexts;
@@ -57,7 +56,7 @@ public class GetScriptContextResponse extends ActionResponse implements StatusTo
     GetScriptContextResponse(StreamInput in) throws IOException {
         super(in);
         int size = in.readInt();
-        HashMap<String, ScriptContextInfo> contexts = new HashMap<>(size);
+        Map<String, ScriptContextInfo> contexts = Maps.newMapWithExpectedSize(size);
         for (int i = 0; i < size; i++) {
             ScriptContextInfo info = new ScriptContextInfo(in);
             contexts.put(info.name, info);
@@ -76,7 +75,7 @@ public class GetScriptContextResponse extends ActionResponse implements StatusTo
     }
 
     private List<ScriptContextInfo> byName() {
-        return contexts.values().stream().sorted(Comparator.comparing(ScriptContextInfo::getName)).collect(Collectors.toList());
+        return contexts.values().stream().sorted(Comparator.comparing(ScriptContextInfo::getName)).toList();
     }
 
     @Override
@@ -85,11 +84,6 @@ public class GetScriptContextResponse extends ActionResponse implements StatusTo
         for (ScriptContextInfo context : contexts.values()) {
             context.writeTo(out);
         }
-    }
-
-    @Override
-    public RestStatus status() {
-        return RestStatus.OK;
     }
 
     @Override
