@@ -8,7 +8,9 @@
 
 package org.elasticsearch.search.aggregations.metrics;
 
-import java.util.stream.Collectors;
+import org.elasticsearch.common.collect.Iterators;
+
+import java.util.Iterator;
 
 abstract class ParsedPercentileRanks extends ParsedPercentiles implements PercentileRanks {
 
@@ -29,6 +31,11 @@ abstract class ParsedPercentileRanks extends ParsedPercentiles implements Percen
 
     @Override
     public Iterable<String> valueNames() {
-        return percentiles.keySet().stream().map(d -> d.toString()).collect(Collectors.toList());
+        return percentiles.keySet().stream().map(Object::toString).toList();
+    }
+
+    @Override
+    public Iterator<Percentile> iterator() {
+        return Iterators.map(super.iterator(), percentile -> new Percentile(percentile.value(), percentile.percent()));
     }
 }
