@@ -7,7 +7,7 @@
  */
 package org.elasticsearch.cluster.coordination;
 
-import org.elasticsearch.Version;
+import org.apache.logging.log4j.Level;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.coordination.ClusterFormationFailureHelper.ClusterFormationState;
@@ -15,24 +15,32 @@ import org.elasticsearch.cluster.coordination.CoordinationMetadata.VotingConfigu
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodeRole;
+import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
+import org.elasticsearch.common.Randomness;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.transport.TransportAddress;
 import org.elasticsearch.common.util.concurrent.DeterministicTaskQueue;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.gateway.GatewayMetaState;
 import org.elasticsearch.monitor.StatusInfo;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.test.EqualsHashCodeTestUtils;
+import org.elasticsearch.test.MockLogAppender;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.UUID;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
-import static java.util.Collections.emptyMap;
 import static java.util.Collections.emptySet;
 import static java.util.Collections.singletonList;
 import static org.elasticsearch.cluster.coordination.ClusterBootstrapService.BOOTSTRAP_PLACEHOLDER_PREFIX;
@@ -46,6 +54,9 @@ import static org.hamcrest.Matchers.oneOf;
 public class ClusterFormationFailureHelperTests extends ESTestCase {
 
     private static final ElectionStrategy electionStrategy = ElectionStrategy.DEFAULT_INSTANCE;
+
+    // Hard-coding the class name here because it is also mentioned in the troubleshooting docs, so should not be renamed without care.
+    private static final String LOGGER_NAME = "org.elasticsearch.cluster.coordination.ClusterFormationFailureHelper";
 
     public void testScheduling() {
         final long expectedDelayMillis;
@@ -61,7 +72,7 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
             );
         }
 
-        final DiscoveryNode localNode = new DiscoveryNode("local", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
+        final DiscoveryNode localNode = DiscoveryNodeUtils.builder("local").roles(emptySet()).build();
         final ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
             .nodes(DiscoveryNodes.builder().add(localNode).localNodeId(localNode.getId()))
             .build();
@@ -82,7 +93,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                     emptyList(),
                     0L,
                     electionStrategy,
-                    new StatusInfo(HEALTHY, "healthy-info")
+                    new StatusInfo(HEALTHY, "healthy-info"),
+                    emptyList()
                 );
             },
             deterministicTaskQueue.getThreadPool(),
@@ -95,16 +107,32 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
         final long startTimeMillis = deterministicTaskQueue.getCurrentTimeMillis();
         clusterFormationFailureHelper.start();
 
-        while (warningCount.get() == 0) {
-            assertTrue(clusterFormationFailureHelper.isRunning());
-            if (deterministicTaskQueue.hasRunnableTasks()) {
-                deterministicTaskQueue.runRandomTask();
-            } else {
-                deterministicTaskQueue.advanceTime();
+        var mockLogAppender = new MockLogAppender();
+        mockLogAppender.addExpectation(
+            new MockLogAppender.SeenEventExpectation("master not discovered", LOGGER_NAME, Level.WARN, "master not discovered")
+        );
+        mockLogAppender.addExpectation(
+            new MockLogAppender.SeenEventExpectation(
+                "troubleshooting link",
+                LOGGER_NAME,
+                Level.WARN,
+                "* for troubleshooting guidance, see "
+                    + "https://www.elastic.co/guide/en/elasticsearch/reference/*/discovery-troubleshooting.html*"
+            )
+        );
+        try (var ignored = mockLogAppender.capturing(ClusterFormationFailureHelper.class)) {
+            while (warningCount.get() == 0) {
+                assertTrue(clusterFormationFailureHelper.isRunning());
+                if (deterministicTaskQueue.hasRunnableTasks()) {
+                    deterministicTaskQueue.runRandomTask();
+                } else {
+                    deterministicTaskQueue.advanceTime();
+                }
             }
+            assertThat(warningCount.get(), is(1L));
+            assertThat(deterministicTaskQueue.getCurrentTimeMillis() - startTimeMillis, is(expectedDelayMillis));
+            mockLogAppender.assertAllExpectationsMatched();
         }
-        assertThat(warningCount.get(), is(1L));
-        assertThat(deterministicTaskQueue.getCurrentTimeMillis() - startTimeMillis, is(expectedDelayMillis));
 
         while (warningCount.get() < 5) {
             assertTrue(clusterFormationFailureHelper.isRunning());
@@ -149,7 +177,7 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
     }
 
     public void testDescriptionOnMasterIneligibleNodes() {
-        final DiscoveryNode localNode = new DiscoveryNode("local", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
+        final DiscoveryNode localNode = DiscoveryNodeUtils.builder("local").roles(emptySet()).build();
         final ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
             .version(12L)
             .nodes(DiscoveryNodes.builder().add(localNode).localNodeId(localNode.getId()))
@@ -163,7 +191,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 15L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet: have discovered []; discovery will continue using [] from hosts providers "
@@ -180,7 +209,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 16L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet: have discovered []; discovery will continue using ["
@@ -198,7 +228,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 singletonList(otherNode),
                 17L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet: have discovered ["
@@ -210,7 +241,7 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
     }
 
     public void testDescriptionOnUnhealthyNodes() {
-        final DiscoveryNode dataNode = new DiscoveryNode("local", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
+        final DiscoveryNode dataNode = DiscoveryNodeUtils.builder("local").roles(emptySet()).build();
         ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
             .version(12L)
             .nodes(DiscoveryNodes.builder().add(dataNode).localNodeId(dataNode.getId()))
@@ -224,18 +255,13 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 15L,
                 electionStrategy,
-                new StatusInfo(UNHEALTHY, "unhealthy-info")
+                new StatusInfo(UNHEALTHY, "unhealthy-info"),
+                emptyList()
             ).getDescription(),
             is("this node is unhealthy: unhealthy-info")
         );
 
-        final DiscoveryNode masterNode = new DiscoveryNode(
-            "local",
-            buildNewFakeTransportAddress(),
-            emptyMap(),
-            Set.of(DiscoveryNodeRole.MASTER_ROLE),
-            Version.CURRENT
-        );
+        final DiscoveryNode masterNode = DiscoveryNodeUtils.builder("local").roles(Set.of(DiscoveryNodeRole.MASTER_ROLE)).build();
         clusterState = ClusterState.builder(ClusterName.DEFAULT)
             .version(12L)
             .nodes(DiscoveryNodes.builder().add(masterNode).localNodeId(masterNode.getId()))
@@ -249,7 +275,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 15L,
                 electionStrategy,
-                new StatusInfo(UNHEALTHY, "unhealthy-info")
+                new StatusInfo(UNHEALTHY, "unhealthy-info"),
+                emptyList()
             ).getDescription(),
             is("this node is unhealthy: unhealthy-info")
         );
@@ -271,7 +298,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 1L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet, this node has not previously joined a bootstrapped cluster, and "
@@ -291,7 +319,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 2L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet, this node has not previously joined a bootstrapped cluster, and "
@@ -313,7 +342,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 singletonList(otherNode),
                 3L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet, this node has not previously joined a bootstrapped cluster, and "
@@ -334,7 +364,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 4L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet, this node has not previously joined a bootstrapped cluster, and "
@@ -385,7 +416,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet and this node was detached from its previous cluster, "
@@ -405,7 +437,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet and this node was detached from its previous cluster, "
@@ -427,7 +460,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 singletonList(otherNode),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet and this node was detached from its previous cluster, "
@@ -449,7 +483,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 singletonList(yetAnotherNode),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered yet and this node was detached from its previous cluster, "
@@ -477,7 +512,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires a node with id [otherNode], "
@@ -497,7 +533,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires a node with id [otherNode], "
@@ -519,7 +556,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 singletonList(otherNode),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires a node with id [otherNode], "
@@ -541,7 +579,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 singletonList(yetAnotherNode),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires a node with id [otherNode], "
@@ -562,7 +601,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires two nodes with ids [n1, n2], "
@@ -581,7 +621,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires at least 2 nodes with ids from [n1, n2, n3], "
@@ -600,7 +641,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires 2 nodes with ids [n1, n2], "
@@ -619,7 +661,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires at least 3 nodes with ids from [n1, n2, n3, n4], "
@@ -638,7 +681,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires at least 3 nodes with ids from [n1, n2, n3, n4, n5], "
@@ -657,7 +701,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires at least 3 nodes with ids from [n1, n2, n3, n4], "
@@ -676,7 +721,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires 3 nodes with ids [n1, n2, n3], "
@@ -695,7 +741,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires a node with id [n1], "
@@ -714,7 +761,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires a node with id [n1] and a node with id [n2], "
@@ -733,7 +781,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires a node with id [n1] and two nodes with ids [n2, n3], "
@@ -752,7 +801,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires a node with id [n1] and "
@@ -765,17 +815,11 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
         );
 
         final DiscoveryNode otherMasterNode = makeDiscoveryNode("other-master");
-        final DiscoveryNode otherNonMasterNode = new DiscoveryNode(
-            "other-non-master",
-            buildNewFakeTransportAddress(),
-            emptyMap(),
-            new HashSet<>(
-                randomSubsetOf(DiscoveryNodeRole.roles()).stream()
-                    .filter(r -> r != DiscoveryNodeRole.MASTER_ROLE)
-                    .collect(Collectors.toList())
-            ),
-            Version.CURRENT
-        );
+        final DiscoveryNode otherNonMasterNode = DiscoveryNodeUtils.builder("other-non-master")
+            .roles(
+                new HashSet<>(randomSubsetOf(DiscoveryNodeRole.roles()).stream().filter(r -> r != DiscoveryNodeRole.MASTER_ROLE).toList())
+            )
+            .build();
 
         String[] configNodeIds = new String[] { "n1", "n2" };
         final ClusterState stateWithOtherNodes = ClusterState.builder(ClusterName.DEFAULT)
@@ -799,7 +843,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
 
             // nodes from last-known cluster state could be in either order
@@ -832,7 +877,8 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
                 emptyList(),
                 0L,
                 electionStrategy,
-                new StatusInfo(HEALTHY, "healthy-info")
+                new StatusInfo(HEALTHY, "healthy-info"),
+                emptyList()
             ).getDescription(),
             is(
                 "master not discovered or elected yet, an election requires one or more nodes that have already participated as "
@@ -846,12 +892,240 @@ public class ClusterFormationFailureHelperTests extends ESTestCase {
 
     }
 
+    public void testJoinStatusReporting() {
+        final var localNode = makeDiscoveryNode("local");
+        final var otherNode1 = makeDiscoveryNode("otherNode1");
+        final var otherNode2 = makeDiscoveryNode("otherNode2");
+
+        final var clusterState = state(localNode, "otherNode");
+
+        final var prefix = "master not discovered or elected yet, an election requires a node with id [otherNode], "
+            + "have only discovered non-quorum []; discovery will continue using [] from hosts providers and ["
+            + noAttr(localNode)
+            + "] from last-known cluster state; node term 0, last-accepted version 0 in term 0";
+
+        assertThat(
+            new ClusterFormationState(
+                Settings.EMPTY,
+                clusterState,
+                emptyList(),
+                emptyList(),
+                0L,
+                electionStrategy,
+                new StatusInfo(HEALTHY, "healthy-info"),
+                List.of(new JoinStatus(otherNode1, 1, JoinHelper.PENDING_JOIN_WAITING_RESPONSE, TimeValue.ZERO))
+            ).getDescription(),
+            is(prefix + "; joining [" + noAttr(otherNode1) + "] in term [1] has status [waiting for response] after [0ms]")
+        );
+
+        assertThat(
+            new ClusterFormationState(
+                Settings.EMPTY,
+                clusterState,
+                emptyList(),
+                emptyList(),
+                0L,
+                electionStrategy,
+                new StatusInfo(HEALTHY, "healthy-info"),
+                List.of(
+                    new JoinStatus(otherNode1, 2, JoinHelper.PENDING_JOIN_CONNECTING, TimeValue.timeValueMillis(10000)),
+                    new JoinStatus(otherNode2, 2, JoinHelper.PENDING_JOIN_WAITING_RESPONSE, TimeValue.timeValueMillis(30000)),
+                    new JoinStatus(otherNode2, 1, JoinHelper.PENDING_JOIN_WAITING_STATE, TimeValue.timeValueMillis(20000))
+                )
+            ).getDescription(),
+            is(
+                prefix
+                    + "; joining ["
+                    + noAttr(otherNode2)
+                    + "] in term [2] has status [waiting for response] after [30s/30000ms]"
+                    + "; joining ["
+                    + noAttr(otherNode2)
+                    + "] in term [1] has status [waiting to receive cluster state] after [20s/20000ms]"
+                    + "; joining ["
+                    + noAttr(otherNode1)
+                    + "] in term [2] has status [waiting to connect] after [10s/10000ms]"
+            )
+        );
+
+        final var expected = new StringBuilder(prefix);
+        final var manyStatuses = new ArrayList<JoinStatus>();
+        for (var term = 20; term > 0; term--) {
+            final var node = randomFrom(otherNode1, otherNode2);
+            if (manyStatuses.size() < 10) {
+                expected.append("; joining [")
+                    .append(noAttr(node))
+                    .append("] in term [")
+                    .append(term)
+                    .append("] has status [status goes here] after [")
+                    .append(term)
+                    .append("ms]");
+            }
+            manyStatuses.add(new JoinStatus(node, term, "status goes here", TimeValue.timeValueMillis(term)));
+        }
+        Randomness.shuffle(manyStatuses);
+
+        assertThat(
+            new ClusterFormationState(
+                Settings.EMPTY,
+                clusterState,
+                emptyList(),
+                emptyList(),
+                0L,
+                electionStrategy,
+                new StatusInfo(HEALTHY, "healthy-info"),
+                manyStatuses
+            ).getDescription(),
+            is(expected.toString())
+        );
+    }
+
+    public void testClusterFormationStateSerialization() {
+        final DiscoveryNode localNode = makeDiscoveryNode("local");
+        List<TransportAddress> resolvedAddresses = List.of(buildNewFakeTransportAddress(), buildNewFakeTransportAddress());
+        List<DiscoveryNode> foundPeers = List.of(
+            DiscoveryNodeUtils.create(UUID.randomUUID().toString()),
+            DiscoveryNodeUtils.create(UUID.randomUUID().toString()),
+            DiscoveryNodeUtils.create(UUID.randomUUID().toString())
+        );
+        List<JoinStatus> joinStatuses = List.of(
+            new JoinStatus(
+                DiscoveryNodeUtils.create(UUID.randomUUID().toString()),
+                1,
+                "join status message",
+                new TimeValue(500, TimeUnit.SECONDS)
+            )
+        );
+        Settings settings = Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), List.of("a", "b", "c")).build();
+        ClusterFormationState clusterFormationState = new ClusterFormationState(
+            settings,
+            state(localNode, new String[] { "n1" }, new String[] { "n2", "n3", "n4" }),
+            resolvedAddresses,
+            foundPeers,
+            0L,
+            electionStrategy,
+            new StatusInfo(HEALTHY, "healthy-info"),
+            joinStatuses
+        );
+        EqualsHashCodeTestUtils.checkEqualsAndHashCode(
+            clusterFormationState,
+            history -> copyWriteable(clusterFormationState, writableRegistry(), ClusterFormationState::new),
+            this::mutateClusterFormationState
+        );
+    }
+
+    private static ClusterState state(DiscoveryNode localNode, VotingConfiguration acceptedConfig, VotingConfiguration committedConfig) {
+        return ClusterState.builder(ClusterName.DEFAULT)
+            .nodes(DiscoveryNodes.builder().add(localNode).localNodeId(localNode.getId()))
+            .metadata(
+                Metadata.builder()
+                    .coordinationMetadata(
+                        CoordinationMetadata.builder()
+                            .lastAcceptedConfiguration(acceptedConfig)
+                            .lastCommittedConfiguration(committedConfig)
+                            .build()
+                    )
+            )
+            .build();
+    }
+
+    private ClusterFormationState mutateClusterFormationState(ClusterFormationState originalClusterFormationState) {
+        Settings settings = Settings.builder()
+            .putList(INITIAL_MASTER_NODES_SETTING.getKey(), originalClusterFormationState.initialMasterNodesSetting())
+            .build();
+        final DiscoveryNode localNode = originalClusterFormationState.localNode();
+        List<TransportAddress> resolvedAddresses = originalClusterFormationState.resolvedAddresses();
+        List<DiscoveryNode> foundPeers = originalClusterFormationState.foundPeers();
+        long currentTerm = originalClusterFormationState.currentTerm();
+        StatusInfo statusInfo = originalClusterFormationState.statusInfo();
+        List<JoinStatus> joinStatuses = originalClusterFormationState.inFlightJoinStatuses();
+        ClusterState clusterState = state(
+            localNode,
+            originalClusterFormationState.lastAcceptedConfiguration(),
+            originalClusterFormationState.lastCommittedConfiguration()
+        );
+        switch (randomIntBetween(1, 5)) {
+            case 1 -> {
+                return new ClusterFormationState(
+                    settings,
+                    clusterState,
+                    resolvedAddresses,
+                    foundPeers,
+                    currentTerm + 1,
+                    electionStrategy,
+                    statusInfo,
+                    joinStatuses
+                );
+            }
+            case 2 -> {
+                List<DiscoveryNode> newFoundPeers = new ArrayList<>(foundPeers);
+                newFoundPeers.add(DiscoveryNodeUtils.create(UUID.randomUUID().toString()));
+                return new ClusterFormationState(
+                    settings,
+                    clusterState,
+                    resolvedAddresses,
+                    newFoundPeers,
+                    currentTerm,
+                    electionStrategy,
+                    statusInfo,
+                    joinStatuses
+                );
+            }
+            case 3 -> {
+                List<JoinStatus> newJoinStatuses = new ArrayList<>(joinStatuses);
+                newJoinStatuses.add(
+                    new JoinStatus(
+                        DiscoveryNodeUtils.create(UUID.randomUUID().toString()),
+                        1,
+                        "join status message",
+                        new TimeValue(500, TimeUnit.SECONDS)
+                    )
+                );
+                return new ClusterFormationState(
+                    settings,
+                    clusterState,
+                    resolvedAddresses,
+                    foundPeers,
+                    currentTerm,
+                    electionStrategy,
+                    statusInfo,
+                    newJoinStatuses
+                );
+            }
+            case 4 -> {
+                StatusInfo newStatusInfo = new StatusInfo(randomFrom(HEALTHY, UNHEALTHY), randomAlphaOfLength(20));
+                return new ClusterFormationState(
+                    settings,
+                    clusterState,
+                    resolvedAddresses,
+                    foundPeers,
+                    currentTerm,
+                    electionStrategy,
+                    newStatusInfo,
+                    joinStatuses
+                );
+            }
+            case 5 -> {
+                return new ClusterFormationState(
+                    Settings.EMPTY,
+                    clusterState,
+                    resolvedAddresses,
+                    foundPeers,
+                    currentTerm,
+                    electionStrategy,
+                    statusInfo,
+                    joinStatuses
+                );
+            }
+            default -> throw new IllegalStateException();
+        }
+    }
+
     private static DiscoveryNode makeDiscoveryNode(String nodeId) {
         final Map<String, String> attributes = new HashMap<>();
         if (randomBoolean()) {
             attributes.put(randomAlphaOfLength(10), randomAlphaOfLength(10));
         }
-        return new DiscoveryNode(nodeId, buildNewFakeTransportAddress(), attributes, DiscoveryNodeRole.roles(), Version.CURRENT);
+        return DiscoveryNodeUtils.create(nodeId, buildNewFakeTransportAddress(), attributes, DiscoveryNodeRole.roles());
     }
 
     private static String noAttr(DiscoveryNode discoveryNode) {
