@@ -19,11 +19,9 @@ import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Locale;
-import java.util.function.Function;
 import java.util.function.UnaryOperator;
 
 public class HtmlSanitizer {
@@ -50,33 +48,22 @@ public class HtmlSanitizer {
         "hr" };
     static final String[] BLOCK_TAGS = new String[] { "p", "div", "h1", "h2", "h3", "h4", "h5", "h6", "ul", "ol", "li", "blockquote" };
     static final String[] TABLE_TAGS = new String[] { "table", "th", "tr", "td", "caption", "col", "colgroup", "thead", "tbody", "tfoot" };
-    static final List<String> DEFAULT_ALLOWED = Arrays.asList(
-        "body",
-        "head",
-        "_tables",
-        "_links",
-        "_blocks",
-        "_formatting",
-        "img:embedded"
-    );
+    static final List<String> DEFAULT_ALLOWED = List.of("body", "head", "_tables", "_links", "_blocks", "_formatting", "img:embedded");
 
-    private static Setting<Boolean> SETTING_SANITIZATION_ENABLED = Setting.boolSetting(
+    private static final Setting<Boolean> SETTING_SANITIZATION_ENABLED = Setting.boolSetting(
         "xpack.notification.email.html.sanitization.enabled",
         true,
         Property.NodeScope
     );
 
-    private static Setting<List<String>> SETTING_SANITIZATION_ALLOW = Setting.listSetting(
+    private static final Setting<List<String>> SETTING_SANITIZATION_ALLOW = Setting.stringListSetting(
         "xpack.notification.email.html.sanitization.allow",
         DEFAULT_ALLOWED,
-        Function.identity(),
         Property.NodeScope
     );
 
-    private static Setting<List<String>> SETTING_SANITIZATION_DISALLOW = Setting.listSetting(
+    private static final Setting<List<String>> SETTING_SANITIZATION_DISALLOW = Setting.stringListSetting(
         "xpack.notification.email.html.sanitization.disallow",
-        Collections.emptyList(),
-        Function.identity(),
         Property.NodeScope
     );
     private static final MethodHandle sanitizeHandle;
@@ -148,66 +135,36 @@ public class HtmlSanitizer {
         for (String tag : allow) {
             tag = tag.toLowerCase(Locale.ROOT);
             switch (tag) {
-                case "_tables":
+                case "_tables" -> {
                     policyBuilder.allowElements(TABLE_TAGS);
                     policyBuilder.allowAttributes("span").onElements("col");
                     policyBuilder.allowAttributes("border", "cellpadding").onElements("table");
                     policyBuilder.allowAttributes("colspan", "rowspan").onElements("th", "td");
-                    break;
-                case "_links":
-                    policyBuilder.allowElements("a")
-                        .allowAttributes("href")
-                        .onElements("a")
-                        .allowStandardUrlProtocols()
-                        .requireRelNofollowOnLinks();
-                    break;
-                case "_blocks":
-                    policyBuilder.allowElements(BLOCK_TAGS);
-                    break;
-                case "_formatting":
-                    policyBuilder.allowElements(FORMATTING_TAGS).allowWithoutAttributes("span");
-                    break;
-                case "_styles":
-                    policyBuilder.allowStyling(CssSchema.DEFAULT);
-                    break;
-                case "img:all":
-                case "img":
-                    images.add(Images.ALL);
-                    break;
-                case "img:embedded":
-                    images.add(Images.EMBEDDED);
-                    break;
-                default:
-                    policyBuilder.allowElements(tag);
+                }
+                case "_links" -> policyBuilder.allowElements("a")
+                    .allowAttributes("href")
+                    .onElements("a")
+                    .allowStandardUrlProtocols()
+                    .requireRelNofollowOnLinks();
+                case "_blocks" -> policyBuilder.allowElements(BLOCK_TAGS);
+                case "_formatting" -> policyBuilder.allowElements(FORMATTING_TAGS).allowWithoutAttributes("span");
+                case "_styles" -> policyBuilder.allowStyling(CssSchema.DEFAULT);
+                case "img:all", "img" -> images.add(Images.ALL);
+                case "img:embedded" -> images.add(Images.EMBEDDED);
+                default -> policyBuilder.allowElements(tag);
             }
         }
         for (String tag : disallow) {
             tag = tag.toLowerCase(Locale.ROOT);
             switch (tag) {
-                case "_tables":
-                    policyBuilder.disallowElements(TABLE_TAGS);
-                    break;
-                case "_links":
-                    policyBuilder.disallowElements("a");
-                    break;
-                case "_blocks":
-                    policyBuilder.disallowElements(BLOCK_TAGS);
-                    break;
-                case "_formatting":
-                    policyBuilder.disallowElements(FORMATTING_TAGS);
-                    break;
-                case "_styles":
-                    policyBuilder.disallowAttributes("style");
-                    break;
-                case "img:all":
-                case "img":
-                    images.remove(Images.ALL);
-                    break;
-                case "img:embedded":
-                    images.remove(Images.EMBEDDED);
-                    break;
-                default:
-                    policyBuilder.disallowElements(tag);
+                case "_tables" -> policyBuilder.disallowElements(TABLE_TAGS);
+                case "_links" -> policyBuilder.disallowElements("a");
+                case "_blocks" -> policyBuilder.disallowElements(BLOCK_TAGS);
+                case "_formatting" -> policyBuilder.disallowElements(FORMATTING_TAGS);
+                case "_styles" -> policyBuilder.disallowAttributes("style");
+                case "img:all", "img" -> images.remove(Images.ALL);
+                case "img:embedded" -> images.remove(Images.EMBEDDED);
+                default -> policyBuilder.disallowElements(tag);
             }
         }
 
